<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>cn.mybatis-mp</groupId>
        <artifactId>mybatis-mp</artifactId>
        <version>1.7.1</version>
    </parent>
    <url>https://gitee.com/mybatis-mp/mybatis-mp-spring-boot-parent</url>
    <artifactId>mybatis-mp-spring-boot-parent</artifactId>
    <version>1.7.1-spring-boot3</version>
    <packaging>pom</packaging>

    <modules>
        <module>mybatis-mp-spring-boot-starter</module>
    </modules>

    <issueManagement>
        <system>Gitee Issue</system>
        <url>https://gitee.com/mybatis-mp/mybatis-mp-spring-boot-parent/issues</url>
    </issueManagement>

    <scm>
        <connection>https://gitee.com/mybatis-mp/mybatis-mp-spring-boot-parent.git</connection>
        <url>https://gitee.com/mybatis-mp/mybatis-mp-spring-boot-parent</url>
    </scm>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <mybatis-mp.version>1.7.1</mybatis-mp.version>
        <mybatis-mp-spring-boot-starter.version>1.7.1-spring-boot3</mybatis-mp-spring-boot-starter.version>

        <logback.version>1.5.11</logback.version>
        <slf4j.version>2.0.16</slf4j.version>
        <mybatis-spring.version>3.0.4</mybatis-spring.version>
        <spring-boot.version>3.3.4</spring-boot.version>

        <mybatis-freemarker.version>1.3.0</mybatis-freemarker.version>
        <mybatis-velocity.version>2.3.0</mybatis-velocity.version>
        <mybatis-thymeleaf.version>1.1.0</mybatis-thymeleaf.version>

        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED -Dfile.encoding=UTF-8</argLine>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>cn.mybatis-mp</groupId>
                <artifactId>mybatis-mp-spring-boot-starter</artifactId>
                <version>${mybatis-mp-spring-boot-starter.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.mybatis-mp</groupId>
                <artifactId>mybatis-mp-core</artifactId>
                <version>${mybatis-mp.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.mybatis-mp</groupId>
                <artifactId>mybatis-mp-generator</artifactId>
                <version>${mybatis-mp.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis-spring</artifactId>
                <version>${mybatis-spring.version}</version>
            </dependency>

            <!-- log -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>jul-to-slf4j</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mybatis.scripting</groupId>
                <artifactId>mybatis-freemarker</artifactId>
                <version>${mybatis-freemarker.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis.scripting</groupId>
                <artifactId>mybatis-velocity</artifactId>
                <version>${mybatis-velocity.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis.scripting</groupId>
                <artifactId>mybatis-thymeleaf</artifactId>
                <version>${mybatis-thymeleaf.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>cn.mybatis-mp</groupId>
            <artifactId>mybatis-mp-core</artifactId>
        </dependency>

        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis-spring</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure-processor</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- @ConfigurationProperties annotation processing (metadata for IDEs) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.mybatis.scripting</groupId>
            <artifactId>mybatis-freemarker</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.mybatis.scripting</groupId>
            <artifactId>mybatis-velocity</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.mybatis.scripting</groupId>
            <artifactId>mybatis-thymeleaf</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <parameters>true</parameters>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <additionalOptions combine.children="append">
                        <option>--add-modules</option>
                        <option>java.desktop</option>
                        <option>--add-modules</option>
                        <option>java.sql</option>
                    </additionalOptions>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>